test/compiler/pass/_function_anon.ods
do () -> return "hello"

do y = (x) -> return x()

do y(() -> return "hello")
