test/compiler/fail/_rec_param_change.ods
do f = (x) ->
    do f(2)
    return !f(true)
